# hivemind

./: .dockerignore  .gitignore  .jscpd.json  .policy.yml  .releaserc.json  AGENTS.md  Dockerfile  README.md  SECURITY.md  flake.nix  pyproject.toml  qlty.toml
.agents/: PROMPT-beekeeper.md  PROMPT-developer.md  PROMPT-feature-requester.md  PROMPT-pr-shepherd.md  PROMPT-ralph-subagents.md  PROMPT-reviewer.md  PROMPT-scout.md  PROMPT-subagents.md  PROMPT-worker-a.md  PROMPT-worker-b.md  PROMPT-worker.md  PROMPT.md  SWARM.md  TOOLS.md  agent-loop.sh  beekeeper-loop.sh  browser-user-loop.sh  developer-loop.sh  feature-requester-loop.sh  loop-common.sh  pr-shepherd.sh  ralph.sh  reviewer-loop.sh  role-loop.sh  scout-loop.sh  swarm-launchd.sh  swarm-roles.sh  swarm.sh  verify-ralph-worktree.sh  verify-swarm.sh  worker-loop-a.sh  worker-loop-b.sh  worker-loop.sh
.agents/skills/gh-address-comments/: SKILL.md
.agents/skills/hivemind-agent-ops/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  container-image.yml  release.yml
.qlty/: qlty.toml
docs/: declarative-config.example.json
scripts/: diagnose-nix-develop.sh
src/hivemind/: __init__.py  __main__.py  agents.py  api.py  config.py  credentials.py  declarative.py  models.py  oauth.py  operator_tools.py  policy.py  prompt_safety.py  providers.py  runtime.py  secret_refs.py  store.py  tool_registry.py
tests/: test_api.py  test_auth_ui.py  test_backup.py  test_copy_slop.py  test_credentials.py  test_frontend_auth_nav.py  test_frontend_routes.py  test_ralph.py  test_ralph_loop.sh  test_release_config.py
(+36 files in other folders)
